# couleur-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  rust-toolchain.toml
palettes/: crystal-attack.hex  crystal-ball.hex  crystal-decay.hex  crystal-flames.hex  crystal-skull.hex  crystalight56.hex  crystallinemoss.hex  cs106.hex  cs108.hex  cs112-v1.hex  cs112-v2.hex  downgraded-32.hex  downgraded-36.hex  dpixel-22.hex  dralette.hex  drawn-to-life-the-next-chapter.hex  draxalette.hex  drazile-16.hex  drazile-22.hex  dream-6.hex  dream-paint.hex  dubble-gums-16.hex  dubious-gb.hex  dull-aquatic.hex  dull-fruit.hex  dull-glow-8.hex  dullish-rainbow.hex  dungeon14.hex  epik-80.hex  equpix15.hex  eroge-48.hex  eroge-copper.hex  general.hex  generic-15.hex  generic-8-color.hex  generic-8.hex  generic-milk-carton.hex  genericgb.hex  genericmonochrome.hex  ocaso.hex  (+1 more)
src/: algorithm.rs  ansi_colorizer.rs  ansi_sequence.rs  cmp.rs  color.rs  colorize.rs  contrast.rs  dispatch.rs  errors.rs  float.rs  layer.rs  lib.rs  macros.rs  main.rs  reset.rs  term.rs  util.rs  value.rs  wrap.rs
src/colors/: ansi_256.rs  ansi_system.rs  cmp.rs  color.rs  mod.rs  rgb_color.rs  rgb_value.rs  triples.rs  util.rs
src/term/: algorithm.rs  ansi_sequence.rs  colorize.rs  layer.rs  mod.rs  reset.rs  util.rs  wrap.rs
tests/: test_colorizer.rs  test_float.rs  test_rgb_color.rs  test_rgb_value.rs  test_rgb_value_ops.rs
